removed header from login and register

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!-- This is the template for the login. Style can be changed. -->
-{% extends "template.html" %}
+{% extends "loginTemplate.html" %}
 
 {% block title %}
     Log In
