--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 <!-- This is the template for the register. Style can be changed. -->
-{% extends "template.html" %}
+{% extends "loginTemplate.html" %}
 
 {% block title %}
     Register
