fixed no link register

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 <!-- This template is required for the login. It gets two arguments: code and message. -->
 
-{% extends "template.html" %}
+{% extends "loginTemplate.html" %}
 
 {% block title %}
     Error
