--- a/templates/register.html
+++ b/templates/register.html
@@ -18,4 +18,5 @@
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
+    <a href="/login">Login</a>
 {% endblock %}
