--- a/templates/template.html
+++ b/templates/template.html
@@ -5,11 +5,14 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../static/css/start.css"
         <title>{% block title %}{% endblock %}</title>
-
     </head>
 
     <body>
+        <h1>get Done</h1>
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
