--- a/templates/template.html
+++ b/templates/template.html
@@ -1,19 +1,26 @@
-<!-- This is just a template. It can be canged and is not important for the login. -->
-
 <!DOCTYPE html>
-
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="../static/css/start.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <title>{% block title %}{% endblock %}</title>
     </head>
 
     <body>
-        <h1>get Done</h1>
+        <header class="header">
+            <nav>
+                <h1 class="title">getDone</h1>
+                <ul>
+                    <li><a href="template.html">Dashboard</a></li>
+                    <li><a href="#">Tasks</a></li>
+                    <li><a href="#">Friends</a></li>
+                    <li><a href="#">Challenges</a></li>
+                    <li><a href="#">Scoreboard</a></li>
+                </ul>
+            </nav>
+        </header>
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
