added links to the header

--- a/templates/template.html
+++ b/templates/template.html
@@ -13,11 +13,11 @@
             <nav>
                 <h1 class="title">getDone</h1>
                 <ul>
-                    <li><a href="template.html">Dashboard</a></li>
-                    <li><a href="#">Tasks</a></li>
-                    <li><a href="#">Friends</a></li>
-                    <li><a href="#">Challenges</a></li>
-                    <li><a href="#">Scoreboard</a></li>
+                    <li><a href="/">Dashboard</a></li>
+                    <li><a href="tasks">Tasks</a></li>
+                    <li><a href="friends">Friends</a></li>
+                    <li><a href="challenges">Challenges</a></li>
+                    <li><a href="scoreboard/monthly">Scoreboard</a></li>
                 </ul>
             </nav>
         </header>
