--- a/templates/tasks/add.html
+++ b/templates/tasks/add.html
@@ -7,4 +7,12 @@
 
 {% block main %}
     Screen for Add Task
+    {% if message %}
+        <p>{{message}}</p>
+    {% endif %}
+    <form method="post" action="/tasks/add">
+        <input type="text" placeholder="Name" name="name" autofocus autocomplete="off">
+        <input type="date" name="due" placeholder="Fälligkeitsdatum">
+        <button type="submit">Add Task</button>
+    </form>
 {% endblock %}
