--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -7,4 +7,13 @@
 
 {% block main %}
     Screen for Edit Task
+    {% if message %}
+        <p>{{message}}</p>
+    {% endif %}
+    <form method="post" action="/tasks/edit">
+        <input type="text" placeholder="Name" name="name" autofocus autocomplete="off" value={{task.description}}>
+        <input type="date" name="due" placeholder="Fälligkeitsdatum" value={{task.due}}>
+        <input type="hidden" name="id" value={{task.id}}>
+        <button type="submit">Add Task</button>
+    </form>
 {% endblock %}
