fixed button labeling

--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -14,6 +14,6 @@
         <input type="text" placeholder="Name" name="name" autofocus autocomplete="off" value={{task.description}}>
         <input type="date" name="due" placeholder="Fälligkeitsdatum" value={{task.due}}>
         <input type="hidden" name="id" value={{task.id}}>
-        <button type="submit">Add Task</button>
+        <button type="submit">Edit Task</button>
     </form>
 {% endblock %}
