--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -8,9 +8,9 @@
 {% block main %}
     Screen for Tasks Overview
     {% for task in tasks %}
-        <!-- There are the following fields in every task that are helpful: description (name) and due date -->
+        <!-- There are the following fields in every task that are helpful: name and due date -->
         <div style="border: 5px solid black;">
-            <h1>{{task.description}}</h1>
+            <h1>{{task.name}}</h1>
             <!-- Currently it is possible that there is no due date -->
             <p>{{task.due}}</p>
             <form method="POST" action="/tasks">
