--- a/templates/template.html
+++ b/templates/template.html
@@ -15,10 +15,10 @@
                 <h1 class="title">getDone</h1>
                 <ul>
                     <li><a href="/">Dashboard</a></li>
-                    <li><a href="tasks">Tasks</a></li>
-                    <li><a href="friends">Friends</a></li>
-                    <li><a href="challenges">Challenges</a></li>
-                    <li><a href="scoreboard/monthly">Scoreboard</a></li>
+                    <li><a href="/tasks">Tasks</a></li>
+                    <li><a href="/friends">Friends</a></li>
+                    <li><a href="/challenges">Challenges</a></li>
+                    <li><a href="/scoreboard/monthly">Scoreboard</a></li>
                 </ul>
             </nav>
         </header>
