--- a/templates/template.html
+++ b/templates/template.html
@@ -18,6 +18,7 @@
                     <li><a href="/tasks">Tasks</a></li>
                     <li><a href="/friends">Friends</a></li>
                     <li><a href="/challenges">Challenges</a></li>
+                    <li><a href="/profile">Profile</a></li>
                     <li><a href="/scoreboard/monthly">Scoreboard</a></li>
                 </ul>
             </nav>
