--- a/templates/template.html
+++ b/templates/template.html
@@ -12,7 +12,7 @@
     <body>
         <header class="header">
             <nav>
-                <h1 class="title">getDone</h1>
+                <h1 class="title">EXAC</h1>
                 <ul>
                     <li><a href="/">Dashboard</a></li>
                     <li><a href="/tasks">Tasks</a></li>
