added the option to add search for friends

--- a/templates/friends/searchResults.html
+++ b/templates/friends/searchResults.html
@@ -7,4 +7,13 @@
 
 {% block main %}
     Screen for Search Friends Results
+    {% for user in users %}
+    <br>
+    <p>{{user.username}}</p>
+    <form action="/friends/add" method="GET">
+        <input type="hidden" name="username" value={{user.username}} > 
+        <button type="submit" >Hinzufügen</button>
+    </form>
+
+    {% endfor %}
 {% endblock %}
