--- a/templates/friends/search.html
+++ b/templates/friends/search.html
@@ -7,4 +7,8 @@
 
 {% block main %}
     Screen for Search Friends
+    <form action="/friends/search" method="POST">
+        <input placeholder="Username" name="username" type="text">
+        <button type="submit">Suchen</button>
+    </form>
 {% endblock %}
