added a logout button

--- a/templates/template.html
+++ b/templates/template.html
@@ -26,6 +26,8 @@
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
+        <br><br><br><br><br><br><br>
+        <a href="/logout">Logout</a>
 
     </body>
 
