added links to new challenge and search challenge

--- a/templates/challenges/overview.html
+++ b/templates/challenges/overview.html
@@ -13,5 +13,7 @@
         <h4>{{first_score}} - {{second_score}}</h4>
         <h5> {{date}}</h5>
     {%endfor%}
-    <a href="/challenges/history">History</a>
+    <div><a href="/challenges/history">History</a></div>
+    <div><a href="/challenges/new">Neue Challenge</a></div>
+    <div><a href="/challenges/search">Suchen</a></div>
 {% endblock %}
