added the option to view challenge details

--- a/templates/challenges/details.html
+++ b/templates/challenges/details.html
@@ -7,4 +7,8 @@
 
 {% block main %}
     Screen for Challenge Details
+    <br>
+        <h3>{{first_user}} vs. {{second_user}}</h3>
+        <h4>{{first_score}} - {{second_score}}</h4>
+        <h5> {{date}}</h5>
 {% endblock %}
