--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -12,4 +12,16 @@
     {%if own_profile%}
         <a href="/profile/edit">Edit</a>
     {% endif %}
+    {% if friend %}
+    <form method="POST" action="/friends/delete">
+        <input type="hidden" name="username" value={{username}}>
+        <button type="submit">Delete friend</button>
+    </form>
+    {% endif %}
+    {% if not friend %}
+    <form action="/friends/add" method="GET">
+        <input type="hidden" name="username" value={{username}} > 
+        <button type="submit" >Send friend requests</button>
+    </form>
+    {% endif %}
 {% endblock %}
