--- a/static/css/start.css
+++ b/static/css/start.css
@@ -101,6 +101,24 @@ header nav ul li a:hover:after {
   border-radius: 10px;
 }
 
-.btn-primary:hover {
+button:hover {
   background-color: white;
+}
+
+.entry {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: lightgrey;
+  padding: 15px;
+  margin: 20px;
+  border-radius: 10px;
+  border: 2px solid grey;
+  font-size: 1.5em;
+}
+
+.btn-small {
+  border-radius: 10px;
+  width: 150px;
+  padding: 10px 5px 10px 5px;
 }
