--- a/static/css/start.css
+++ b/static/css/start.css
@@ -99,6 +99,23 @@ header nav ul li a:hover:after {
   width: 25%;
   padding: 10px 5px 10px 5px;
   border-radius: 10px;
+  text-decoration: none;
+  border: 2px solid grey;
+  background-color: #dddddd;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 button:hover {
