--- a/static/css/start.css
+++ b/static/css/start.css
@@ -96,12 +96,13 @@ header nav ul li a:hover:after {
 }
 
 .btn-primary {
-  width: 25%;
+  max-width: 100%;
   padding: 10px 5px 10px 5px;
   border-radius: 10px;
   text-decoration: none;
   border: 2px solid grey;
   background-color: #dddddd;
+  height: 100%;
 }
 
 a:visited {
@@ -114,8 +115,9 @@ a {
 
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 button:hover {
@@ -131,6 +133,7 @@ button:hover {
   margin: 20px;
   border-radius: 10px;
   border: 2px solid grey;
+  width: 80%;
   font-size: 1.5em;
 }
 
@@ -138,4 +141,8 @@ button:hover {
   border-radius: 10px;
   width: 150px;
   padding: 10px 5px 10px 5px;
+}
+
+form {
+  align-content: center;
 }
