--- a/templates/challenges/overview.html
+++ b/templates/challenges/overview.html
@@ -8,7 +8,7 @@
 {% block main %}
     Screen for Challenges Overview
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
-        <br>
+    <div class="entry">
         <h3>{{first_user}} vs. {{second_user}}</h3>
         <h4>{{first_score}} - {{second_score}}</h4>
         <h5> {{date}}</h5>
@@ -16,13 +16,14 @@
             <input type="hidden" name="challenge_id" value={{id}}>
             <button type="submit">Details</button>
         </form>
+    </div>
     {%endfor%}
-    <div><a href="/challenges/history">History</a></div>
-    <div><a href="/challenges/new">Neue Challenge</a></div>
-    <div><a href="/challenges/search">Suchen</a></div>
+    <div class="btn-primary margin"><a href="/challenges/new">Neue Challenge</a></div>
+    <div class="btn-primary margin"><a href="/challenges/history">History</a></div>
+    <div class="btn-primary margin"><a href="/challenges/search">Suchen</a></div>
     <h2>Incoming Requests</h2>
     {% for name in incoming_requests %}
-    <br>
+    <div class="entry">
         <p>{{name}}</p>
         <form action="/challenges/accept" method="POST">
             <input type="hidden" name="username" value={{name}} > 
@@ -32,10 +33,12 @@
             <input type="hidden" name="username" value={{name}} > 
             <button type="submit">Ablehnen</button>
         </form>
+    </div>
     {% endfor %}
     <h2>Outgoing Requests</h2>
     {% for name in pending_requests %}
-    <br>
+    <div class="entry">
         <p>{{name}}</p>
+    </div>
     {% endfor %}
 {% endblock %}
