--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -6,25 +6,24 @@
 {% endblock %}
 
 {% block main %}
-    Screen for Tasks Overview
     {% for task in tasks %}
         <!-- There are the following fields in every task that are helpful: name and due date -->
-        <div style="border: 5px solid black;">
-            <h1>{{task.name}}</h1>
+        <div class="entry">
+            <h3>{{task.name}}</h1>
             <!-- Currently it is possible that there is no due date -->
             <p>{{task.due}}</p>
             <form method="POST" action="/tasks">
                 <input type="hidden" value={{task.id}} name="id">
-                <button type="submit">Erledigt</button>
+                <button class="btn-primary" type="submit">Erledigt</button>
             </form>
             <form method="GET" action="/tasks/edit">
                 <input type="hidden" value={{task.id}} name="id">
-                <button type="submit">Edit</button>
+                <button class="btn-primary" type="submit">Edit</button>
             </form>
         </div>
     {% endfor %}
     <br><br>
-    <a href="/tasks/add">Add New Task</a>
+    <div class="btn-primary"><a href="/tasks/add">Add New Task</a></div>
     <br><br>
     
 {% endblock %}
