--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
         <p>{{name}}</p>
         <form action="/friends/add/accept" method="POST">
             <input type="hidden" name="username" value={{name}} > 
-            <button type="submit">Bestätigen</button>
+            <button type="submit"  class="btn-primary">Bestätigen</button>
         </form>
         <form action="/friends/add/decline" method="POST">
             <input type="hidden" name="username" value={{name}} > 
-            <button type="submit">Ablehnen</button>
+            <button type="submit"  class="btn-primary">Ablehnen</button>
         </form>
     </div>
     {% endfor %}
@@ -27,11 +27,11 @@
         <p>{{name}}</p>
         <form action="/challenges/accept" method="POST">
             <input type="hidden" name="username" value={{name}} > 
-            <button type="submit">Bestätigen</button>
+            <button type="submit" class="btn-primary">Bestätigen</button>
         </form>
         <form action="/challenges/decline" method="POST">
             <input type="hidden" name="username" value={{name}} > 
-            <button type="submit">Ablehnen</button>
+            <button type="submit" class="btn-primary">Ablehnen</button>
         </form>
     </div>
     {% endfor %}
@@ -42,11 +42,11 @@
         <p>{{score}}</p>
         <form method="GET" action="/profile">
             <input type="hidden" name="username" value={{username}} >
-            <button type="submit">View his profile</button>
+            <button type="submit"  class="btn-primary">View his profile</button>
         </form>
         <form method="GET" action="/friends/teamUp">
             <input type="hidden" name="username_friend" value={{username}} >
-            <button type="submit">View his tasks</button>
+            <button type="submit"  class="btn-primary">View his tasks</button>
         </form>
     </div>
     {% endfor %}
@@ -58,7 +58,7 @@
         <h5> {{date}}</h5>
         <form action="/challenges/details" method="GET">
             <input type="hidden" name="challenge_id" value={{id}}>
-            <button type="submit">Details</button>
+            <button type="submit"  class="btn-primary">Details</button>
         </form>
     </div>
 {%endfor%}
