fixed bug with name with spaces

--- a/templates/friends/searchResults.html
+++ b/templates/friends/searchResults.html
@@ -10,7 +10,7 @@
     <div class="entry">
         <p>{{user.username}}</p>
     <form action="/friends/add" method="GET" >
-        <input type="hidden" name="username" value={{user.username}} > 
+        <input type="hidden" name="username" value="{{user.username}}" > 
         <button type="submit" class="btn-small" >Hinzufügen</button>
     </div>
     
