--- a/templates/friends/add.html
+++ b/templates/friends/add.html
@@ -10,7 +10,7 @@
     <h1>{{username}}</h1>
     <h2>{{score}}</h2>
     <form action="/friends/add" method="POST">
-        <input type="hidden" name="username" value={{username}}>    
+        <input type="hidden" name="username" value="{{username}}">    
         <button type="submit">Send friend request</button>
     </form>
 {% endblock %}
