--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
     <div class="entry">
         <p>{{name}}</p>
         <form action="/friends/add/accept" method="POST">
-            <input type="hidden" name="username" value={{name}} > 
+            <input type="hidden" name="username" value="{{name}}" > 
             <button type="submit"  class="btn-primary">Bestätigen</button>
         </form>
         <form action="/friends/add/decline" method="POST">
-            <input type="hidden" name="username" value={{name}} > 
+            <input type="hidden" name="username" value="{{name}}" > 
             <button type="submit"  class="btn-primary">Ablehnen</button>
         </form>
     </div>
@@ -26,11 +26,11 @@
     <div class="entry">
         <p>{{name}}</p>
         <form action="/challenges/accept" method="POST">
-            <input type="hidden" name="username" value={{name}} > 
+            <input type="hidden" name="username" value="{{name}}" > 
             <button type="submit" class="btn-primary">Bestätigen</button>
         </form>
         <form action="/challenges/decline" method="POST">
-            <input type="hidden" name="username" value={{name}} > 
+            <input type="hidden" name="username" value="{{name}}" > 
             <button type="submit" class="btn-primary">Ablehnen</button>
         </form>
     </div>
@@ -41,11 +41,11 @@
         <p>{{username}}</p>
         <p>{{score}}</p>
         <form method="GET" action="/profile">
-            <input type="hidden" name="username" value={{username}} >
+            <input type="hidden" name="username" value="{{username}}">
             <button type="submit"  class="btn-primary">View his profile</button>
         </form>
         <form method="GET" action="/friends/teamUp">
-            <input type="hidden" name="username_friend" value={{username}} >
+            <input type="hidden" name="username_friend" value="{{username}}" >
             <button type="submit"  class="btn-primary">View his tasks</button>
         </form>
     </div>
