--- a/templates/template.html
+++ b/templates/template.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="container p-5">
+        <main class="container-main">
             {% block main %}{% endblock %}
         </main>
         <br><br><br><br><br><br><br>
