--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
 <div class="container">
     <div class="left-align"> <h1 >Your current Tasks: </h1></div>
     {% for task in tasks %}
-    <div class="entry">
-        {{task.name}}
-        <div class="container-horizontal">
+    <div class="entry2">
+        <div class="align-content-left">
+            {{task.name}}
+        </div>
+        <div class="container-horizontal align-content-right">
             <p class="margin-lr">{{task.due}}</p>
             <form method="POST" action="/tasks">
                 <input type="hidden" value={{task.id}} name="id">
@@ -26,12 +28,12 @@
 
     <div class="left-align"><h1>Friends:</h1></div>
     {% for score, username in friends %}
-    <div class="entry">
-        <p>{{username}}</p>
-        <div class="container-horizontal">
-            <p>Score: {{score}}</p>
+    <div class="entry3">
+        <div class="align-content-left">
+            <p>{{username}}</p>
         </div>
-        <div class="container-horizontal">
+        <p>Score: {{score}}</p>
+        <div class="container-horizontal align-content-right">
             <form method="GET" action="/profile">
                 <input type="hidden" name="username" value="{{username}}">
                 <button type="submit"  class="btn-text margin-lr">View his profile</button>
@@ -48,14 +50,14 @@
 
     <div class="left-align"><h1>Challenges:</h1></div>
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
-    <div class="entry">
+    <div class="entry3">
         <div class="container-horizontal">
             <p>{{first_user}}</p>
             <p class="font-marker margin-lr"> vs. </p>
             <p>{{second_user}}</p>
         </div>
         <p>Score: {{first_score}} : {{second_score}}</p>
-        <div class="container-horizontal">
+        <div class="container-horizontal align-content-right">
             <p class="margin-lr">Expires: {{date}}</p>
             <form action="/challenges/details" method="GET">
                 <input type="hidden" name="challenge_id" value={{id}}>
@@ -69,9 +71,11 @@
 
     <div class="left-align"><h1>Friend Requests:</h1></div>
     {% for name in incoming_friend_requests %}
-    <div class="entry">
-        <p>{{name}}</p>
-        <div class="container-horizontal">
+    <div class="entry2">
+        <div class="align-content-left">
+            <p>{{name}}</p>
+        </div>
+        <div class="container-horizontal align-content-right">
             <form action="/friends/add/accept" method="POST">
                 <input type="hidden" name="username" value="{{name}}" > 
                 <button type="submit"  class="btn-text margin-lr">Bestätigen</button>
@@ -88,9 +92,11 @@
 
     <div class="left-align"><h1>Challenge Requests:</h1></div>
     {% for name in incoming_challenge_requests %}
-    <div class="entry">
-        <p>{{name}}</p>
-        <div class="container-horizontal">
+    <div class="entry2">
+        <div class="align-content-left">
+            <p>{{name}}</p>
+        </div>  
+        <div class="container-horizontal align-content-right">
             <form action="/challenges/accept" method="POST">
                 <input type="hidden" name="username" value="{{name}}" > 
                 <button type="submit" class="btn-text margin-lr">Bestätigen</button>
