--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -9,7 +9,7 @@
     <div class="container">
         {% for task in tasks %}
             <!-- There are the following fields in every task that are helpful: name and due date -->
-            <div class="entry">
+            <div class="entry3">
                 <div class="align-content-left">
                     <p>{{task.name}}</p>
                 </div>
