--- a/static/css/start.css
+++ b/static/css/start.css
@@ -212,3 +212,13 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+
+.big-font {
+  font-size: 2em;
+}
+
+.space-around {
+  display: flex;
+  justify-content: space-between;
+  width: 100%
+}
